# markdown-todo

./: .gitignore  .replit  CLAUDE.md  DEPLOYMENT_GUIDE.md  ELECTRON_SETUP.md  ELECTRON_USAGE.md  ELECTRON_WHITE_SCREEN_FIX.md  FINAL_BUILD_INSTRUCTIONS.md  LOCAL_DEVELOPMENT.md  PORT_CONFIGURATION.md  README.md  drizzle.config.ts  electron.config.cjs  electron.config.js  package-lock.json  package.json  package.json.tmp
assets/: icon.icns
attached_assets/: Pasted-sh-scripts-build-electron-final-sh-Building-Electron-macOS-app-Building-web-application--1749367138268_1749367138268.txt  Pasted-sh-scripts-build-electron-sh-Building-Electron-macOS-app-Building-web-application-r-1749357189664_1749357189664.txt  Pasted-sh-scripts-build-electron-sh-Building-Electron-macOS-app-Fixing-package-json-dependencies-1749360125686_1749360125686.txt  Pasted-sh-scripts-build-electron-sh-Building-Electron-macOS-app-Fixing-package-json-dependencies-1749365313212_1749365313213.txt
electron/: build.json  entitlements.mac.plist  main.ts  package.json  preload.ts  static-server.ts  tsconfig.json
scripts/: build-electron-direct.sh  build-electron-final-fixed.sh  build-electron-final.sh  build-electron-fixed.sh  build-electron-quick.sh  build-electron.sh  build-simple.sh  build-tauri.sh  build-test-minimal.sh  dev-electron.sh  dev-local.sh  electron-only.sh  fix-build-deps.sh  fix-white-screen.sh  test-build-fix.sh  test-connection.cjs  test-electron-connection.sh  test-electron-paths.sh  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+28 files in other folders)
